<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:checked="true"
            />
        <item
            android:id="@+id/schedule"
            android:title="@string/schedule"
            />
        <item
            android:id="@+id/campus"
            android:title="@string/campus"/>
        <item
            android:id="@+id/menu_publish_team"
            android:title="@string/publish_team"/>
        <item
            android:id="@+id/menu_publish_help"
            android:title="@string/publish_help"/>
        <item
            android:id="@+id/menu_publish_activity"
            android:title="@string/publish_activity"/>
        <item
            android:id="@+id/menu_publish_deal"
            android:title="@string/publish_deal"/>
        <item
            android:id="@+id/menu_publish_notebook"
            android:title="@string/notebook"/>
        <item
            android:id="@+id/setting"
            android:title="@string/setting"/>
    </group>
</menu>